# StructorCLI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/structorcli/: cli.py  scaffold.py
src/structorcli/templates/api/: README.md
src/structorcli/templates/astro-site/: README.md  package.json
src/structorcli/templates/bash/: README.md  script.sh
src/structorcli/templates/cli/: README.md  cli.py
src/structorcli/templates/cpp/: README.md  main.cpp
src/structorcli/templates/csharp/: Program.cs  README.md
src/structorcli/templates/desktop/: README.md
src/structorcli/templates/discord-bot/: README.md  bot.js  package.json
src/structorcli/templates/discord-bot-python/: README.md  bot.py
src/structorcli/templates/django/: README.md  manage.py
src/structorcli/templates/express/: README.md  app.js  package.json
src/structorcli/templates/fastapi/: README.md
src/structorcli/templates/go/: README.md
src/structorcli/templates/go-webserver/: README.md  main.go
src/structorcli/templates/graphql/: README.md  package.json  server.js
src/structorcli/templates/html/: README.md  index.html
src/structorcli/templates/java/: Main.java  README.md
src/structorcli/templates/kotlin/: Main.kt  README.md
src/structorcli/templates/microservice/: README.md
src/structorcli/templates/nestjs/: README.md  package.json
src/structorcli/templates/node/: README.md  package.json
src/structorcli/templates/php/: README.md
src/structorcli/templates/python/: README.md  main.py
src/structorcli/templates/pytorch/: README.md  main.py
(+20 files in other folders)
